# trackedfitness-rust-solidjs

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20230407213007_create_user_table.down.sql  20230407213007_create_user_table.up.sql  20230408204437_create_food_brand_table.down.sql  20230408204437_create_food_brand_table.up.sql  20230408213109_create_food_table.down.sql  20230408213109_create_food_table.up.sql  20230408214206_create_meal_table.down.sql  20230408214206_create_meal_table.up.sql  20230408214608_create_meal_food_table.down.sql  20230408214608_create_meal_food_table.up.sql  20230412162415_create_meal_of_day_table.down.sql  20230412162415_create_meal_of_day_table.up.sql  20230412162418_create_food_log_table.down.sql  20230412162418_create_food_log_table.up.sql  20230417210526_create_user_meal_of_day.down.sql  20230417210526_create_user_meal_of_day.up.sql  20230419152831_create_progress_table.down.sql  20230419152831_create_progress_table.up.sql  20230422133355_create_user_profile_table.down.sql  20230422133355_create_user_profile_table.up.sql  20230422133402_create_diet_target_table.down.sql  20230422133402_create_diet_target_table.up.sql  20230523194213_update_food_table_remove_unique_name.up.sql  20230616170059_add_email_verified_users_user.down.sql  20230616170059_add_email_verified_users_user.up.sql  20230913014039_exercise.down.sql  20230913014039_exercise.up.sql  20231003104108_add_brand_image.down.sql  20231003104108_add_brand_image.up.sql  20231008122752_create_user_follower.down.sql  20231008122752_create_user_follower.up.sql  (+12 more)
(+313 files in other folders)
