[package]
name = "trackedfitness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.7.0", features = ["http2", "macros"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.29"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client", "http1", "client-legacy"] }
jsonwebtoken = "9.1.0"
lettre = { version = "0.11.2", features = ["builder"] }
mime = "0.3.17"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
slug = "0.1.5"
sqlx = { version = "0.7.2", features = ["postgres", "chrono", "runtime-tokio", "uuid", "rust_decimal", "tls-rustls", "migrate"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
